--- a/src/app/cardlist/cardlist.component.html
+++ b/src/app/cardlist/cardlist.component.html
@@ -1,4 +1,4 @@
-<div><ul *ngFor="let item of monster">
-<li>{{item | json}}</li>
+<div><ul *ngFor="let item of moster">
+<li>{{item.name | json}}</li>
 </ul></div>
 
