--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,1 +1,14 @@
-<p>card works!</p>
+<!-- <div *ngFor="let items of data">
+<img src='https://robohash.org/{{items.id}}?set=set4&size=180x180' alt="monsters"/>
+{{items.name}}
+</div> -->
+
+<div *ngFor="let item of data">
+  <div>
+    <img
+      src='https://robohash.org/{{item.id}}?set=set1&size=180x180'
+      alt="monsters"
+    />
+    {{item.name}}
+  </div>
+</div>
