--- a/src/app/search-box/search-box.component.html
+++ b/src/app/search-box/search-box.component.html
@@ -1,1 +1,4 @@
-<p>search-box works!</p>
+<div>
+
+  <input  type="search" (keyup)='searchChange()' [(ngModel)]='searchField' name="input" #text/>
+</div>
