--- a/src/app/cardlist/cardlist.component.html
+++ b/src/app/cardlist/cardlist.component.html
@@ -1,5 +1,5 @@
 <app-search-box (searchEvent)='searchText=$event' > </app-search-box>
-{{searchText}}  {{filterMonsters}}
+{{searchText}}
 <div class="card-list">
 
   <div class="card-container" *ngFor="let item of moster">
