--- a/src/app/search-box/search-box.component.html
+++ b/src/app/search-box/search-box.component.html
@@ -1,4 +1,3 @@
-<div>
-
-  <input  type="search" (keyup)='searchChange()' [(ngModel)]='searchField' name="input" #text/>
+<div  >
+ <input  class="search" type="search" (keyup)='searchChange()' [(ngModel)]='searchField' name="input" #text/>
 </div>
