--- a/src/app/search-box/search-box.component.css
+++ b/src/app/search-box/search-box.component.css
@@ -1,10 +1,19 @@
+div{
+  display: flex;
+  justify-content: center;
+}
+
 .search {
   -webkit-appearance: none;
   border: none;
   outline: none;
   padding: 10px;
-  width: 150px;
+  /* width: 150px; */
   line-height: 30px;
   margin-bottom: 30px;
-  align-content: center;
+
+
+
 }
+
+
